# PracticalBlueprintThresholds

./: README.md
Data/ScalingBudgetData/: combined_noise_sweep_data_N6.pickle  combined_noise_sweep_data_N6.pickleZone.Identifier  error_budget_data_N6.pickle  error_budget_data_N6.pickleZone.Identifier
Data/TimeCostData/: Chain_m10_data.pickle  max_m_L.pickle  space_Chain_m8_data.pickle  space_Chain_m8_data_new.pickle  time_Chain_m8_data.pickle  time_Chain_m8_data_new.pickle
Decoding/: Decoder  Decoder.py  NoiseSampling_funcs.py  linear_algebra_inZ2_new.py  meson.build  misc_functions.py  rsg_error_sampling.py
Decoding/CppCode/: LossDec_funcs.cpp  LossDec_funcs.h  NoiseSampling.cpp  NoiseSampling.h
GaussianModelling/: Analytical  Qiskit
Lattice/: FFCCLattice_Chain
ScalingBudget/: FFCCLattice_Chain_Budget.py  FFCCLattice_Chain_Scaling.py
TimeCost/: Blueprint - QEC time.ipynb  FFCCLattice_Chain_TimeCost
